--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Modal</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+  <button id="modalbtn" class="button">CLICKY!!</button>
+
+
+    <div id="simpleModal" class="modal">
+      <div id="modal-content">
+        <span class="closebtn">&times;</span>
+        <p>HELLO I AM A MODAL</p>
+      </div>
+    </div>
+
+<script src="main.js"></script>
+</body>
+</html>
