--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
 </head>
 <body>
 
-  <button id="modalbtn" class="button">CLICKY!!</button>
-
+  <button id="modalBtn" class="button">Click Here</button>
 
     <div id="simpleModal" class="modal">
       <div class="modal-content">
-        <span id="closebtn" class="closebtn">&times;</span>
-        <p>HELLO I AM A MODAL</p>
+        <div class="modal-header">
+            <span class="closeBtn">&times;</span>
+            <h2>Modal Header</h2>
+        </div>
+        <div class="modal-body">
+          <p>Hello...I am a modal</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla repellendus nisi, sunt consectetur ipsa velit repudiandae aperiam modi quisquam nihil nam asperiores doloremque mollitia dolor deleniti quibusdam nemo commodi ab.</p>
+        </div>
+        <div class="modal-footer">
+          <h3>Modal Footer</h3>
+        </div>
       </div>
     </div>
 
